add check for the current users info
